--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.14)
 project(UseCudaLib LANGUAGES CXX CUDA)
 
-add_library(UseCuda STATIC UseCuda.cpp)
-target_include_directories(UseCuda PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+add_library(UseCuda STATIC UseCuda.cu)
+#target_include_directories(UseCuda PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 # 如果你想支援 CUDA
 set_target_properties(UseCuda PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
@@ -19,6 +19,7 @@ install(FILES UseCuda.h DESTINATION include)
 include(CMakePackageConfigHelpers)
 write_basic_package_version_file(
     "${CMAKE_CURRENT_BINARY_DIR}/UseCudaConfigVersion.cmake"
+    VERSION 1.0
     COMPATIBILITY SameMajorVersion
 )
 
